name:                learn-you-a-haskell
version:             0.1.0.0

homepage:            https://github.com/extlife/learn-you-a-haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Grinevich Vladimir
maintainer:          extlife@yandex.ru
copyright:           2022 Grinevich Vladimir
category:            Education
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md


library
  hs-source-dirs:      src
  exposed-modules:     Ch01.Core
                     , Ch02.Core
                     , Ch03.Core
                     , Ch04.Core
                     , Ch05.Core
                     , Ch06.Core
                     , Ch06.Geometry.Sphere
                     , Ch06.Geometry.Cuboid
                     , Ch06.Geometry.Cube
                     , Ch07.Core
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers==0.6.4.1

